fix overflow in options are visible

--- a/portiaui/app/styles/templates/application.scss
+++ b/portiaui/app/styles/templates/application.scss
@@ -10,7 +10,8 @@
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
 }
 
